# arya-video-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  WEEK2_SUMMARY.md  WEEK3_SUMMARY.md  WEEK4_SUMMARY.md  WEEK5_PHASE1_SUMMARY.md  development_process_week_1.md  docker-compose.yml  document.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yml
alembic/versions/: 001_add_conversations.py  002_add_performance_indexes.py
app/: config.py  main.py
app/agents/: __init__.py  base.py  composer.py  image.py  story.py  storyboard.py  style.py  video.py
app/api/: exceptions.py  schemas.py
app/config/: prometheus.py
app/core/: __init__.py  context.py  state_machine.py  task_manager.py
app/database/: __init__.py  base.py  conversation_repository.py  conversation_repository_optimized.py  resource_repository_optimized.py  script_repository_optimized.py  session.py  storyboard_repository_optimized.py  task_repository_optimized.py
app/entities/: __init__.py  conversation.py  resource.py  script.py  storyboard.py  task.py
app/middleware/: __init__.py  prometheus.py  prometheus_middleware.py
app/models/: manager.py
app/prompts/: __init__.py  composer_agent.py  image_agent.py  story_agent.py  storyboard_agent.py  style_agent.py  video_agent.py
app/scheduler/: celery_app.py  tasks.py
app/services/: __init__.py  cache.py  cache_config.py  conversation_service.py  prometheus_metrics.py  redis_cache_service.py  storage.py  video_processor.py
app/utils/: logger.py
config/: prometheus.yml
config/prometheus/: alerts.yml
docs/: API_DOCUMENTATION.md  DATABASE_PERFORMANCE_ANALYSIS.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE2_CACHE_OPTIMIZATION_REPORT.md  TESTING_GUIDE.md  TROUBLESHOOTING_GUIDE.md  WEEK1_TEST_REPORT.md
grafana/: README.md
grafana/dashboards/: api-performance.json  system-monitoring.json  system-overview.json
nginx/: nginx.conf
prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml
scripts/: benchmark_database.py  init_db.py  run_tests.py  run_tests.sh  setup_test_env.sh  start_api.py  start_worker.py  verify_setup.py
tests/: conftest.py  test_cache.py  test_celery.py  test_config.py  test_database.py  test_entities.py  test_health.py  test_logger.py
(+33 files in other folders)
